sections bottom gap fixed

--- a/client/src/app/components/Main/Main.scss
+++ b/client/src/app/components/Main/Main.scss
@@ -2,6 +2,7 @@
 
 #main {
   @include display-flex(column);
+  height: 100%;
   overflow: hidden;
   position: absolute;
   top: 0;
